syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "group7.protobuf";
option java_outer_classname = "EventProto";

service EventService{
  rpc CreateEvent(EventRequest) returns (EventResponse){};
}
message EventRequest{
	string name = 1;
	string description = 2;
	string Entertainer = 3;
	string CafeOwner = 5;
	string Date=6;

}
message EventResponse{
  string id = 1;
  string name = 2;
  string description = 3;
  string Entertainer = 4;
}